2006-11-23  Mike Cvet  <mcvet@redhat.com>

	* SourceWindow.java (populateStackBrowser): Moved some code around;
	preventing redundant variable creation. Fixed a bug where mixed 
	debuginfo/non-debuginfo programs didn't highlight properly.
	(currentStackChanged): If the Task that the incoming StackFrame belongs
	to has also changed from the last StackFrame's, then update the 
	Register, Memory, and Disassembly windows with the new Task information
	if they have been initialized and are open. Fixes #3302.
	(toggleRegisterWindow): Set RegisterWindow closed boolean to false.
	(toggleMemoryWindow): Set MemoryWindow closed boolean to false.
	(toggleDisassemblyWindow): Set DisassemblyWindow closed boolean to false.

2006-11-22  Mike Cvet  <mcvet@redhat.com>

	* SourceWindow.java (doFinish): Added code to prepare for step-over work.
	(doNext): Ditto.

2006-11-22  Rick Moseley  <rmoseley@redhat.com>

	* testfiles/test_looper.xml: Update new base DOM for CDTParser code
	changes.
	* testfiles/test_main_looper.c: Added comments header for further
	parser testing.

2006-11-22  Mike Cvet  <mcvet@redhat.com>

	* SourceWindowFactory.java (createSourceWindow): Updated calls to 
	getRunState() from getStateModel().
	(SourceWinListener.lifeCycleQuery): Ditto. 
	* SourceWindow.java (SW_state): No longer used.
	(stepInstruction): Removed call to SW_state, update RunState instead.
	(procReblocked): Ditto.
	(doRun): Ditto.
	(doStep): Ditto.
	(executeTasks): Ditto.
	(doNext): Ditto.
	(updateShownStackFrame): Updated to use RunState's state instead of 
	this window's SW_state.
	(toggleDisassemblyWindow): Add the DisassemblyWindow's LockObserver to
	RunState's Observer list.
	(toggleRegisterWindow): Ditto for RegisterWindow.
	(toggleMemoryWindow): Ditto for MemoryWindow.
	(LockObserver.update):  Commented. Hugely simplified. Relies on
	the RunState for all state manipulation. Only called when the last Task
	to be blocked has been blocked. No longer differentiates stepping 